--- a/app/views/badges/index.html.haml
+++ b/app/views/badges/index.html.haml
@@ -1,26 +1,25 @@
-%h3 Get a badge
+.upper
+	%h2 Get a badge
 
-Use your profile - full of awesome testimonials -  to demonstrate your true potential to prospective clients.
-You can get a badge like this one to link your website to your profile, just copy the code from below.
+.lower
+	Use your profile - full of awesome testimonials -  to demonstrate your true potential to prospective clients. You can get a badge like this one to link your website to your profile, just copy the code from below.
 
-= image_tag 'badge.png', :id => 'badge'
+	= image_tag 'testify_badge.jpg', :id => 'badge'
 
-%textarea.badge_area
-	&== #{"<a href=\"http://testifyapp.com/" + current_user.handle + "\"><img src=\"http://testifyapp.com/images/badge.png\" alt=\"See what our customers think of us on Testify\"></a>"}
+	%textarea#badge_area
+		&== #{"<a href=\"http://testifyapp.com/" + current_user.handle + "\"><img src=\"http://testifyapp.com/images/testify_badge.png\" alt=\"See what our customers think of us on Testify\"></a>"}
 
-%br
-%br
 
-#message
-	If you'd rather create your own, you can access your data through our new API! To get the XML data for your profile and reviews, you can find them here:
-	%br
-	= link_to "http://testifyapp.com/#{current_user.handle}.xml", "http://testifyapp.com/#{current_user.handle}.xml"
-	%p
-	Whatever you decide, we'd love to see what you come up with, so be sure to get in touch at:
-	= link_to 'shout@testifyapp.com', 'mailto:shout@testifyapp.com'
-%br
-%br
+	%p.divider
+		If you'd rather create your own, you can access your data through our new API! To get the XML data for your profile and reviews, you can find them here:
+		%br
+		= link_to "http://testifyapp.com/#{current_user.handle}.xml", "http://testifyapp.com/#{current_user.handle}.xml"
+		%p
+			%h5
+				Whatever you decide, we'd love to see what you come up with, so be sure to get in touch at:
+				= link_to 'shout@testifyapp.com', 'mailto:shout@testifyapp.com'
 
-Alternatively, you can just use the following link to get to share your profile.
-%br
-= link_to "http://testifyapp.com/#{current_user.handle}", short_user_path(current_user)
+	%p.divider
+		Alternatively, you can just use the following link to get to share your profile.
+		%br
+		= link_to "http://testifyapp.com/#{current_user.handle}", short_user_path(current_user)
