--- a/app/views/pages/index.html.haml
+++ b/app/views/pages/index.html.haml
@@ -12,7 +12,7 @@
 	%h3 We're in closed beta!
 	-	form_for(@email) do |f|
 		- f.error_messages
-		%h4 Enter your email address below to recieve one email when we launch.
+		%h5 Enter your email address below to recieve one email when we launch.
 		%p
 			= f.text_field :address, :value => 'Email address'
 			= f.submit 'Submit'
@@ -22,21 +22,21 @@
 
 %h3#subtagline Here's how Testify can help you:
 
-.review
+.point
 	%h2
 		%span.number 1.
 		Boost your reputation
-	.review_content With great testimonials from the people you've worked with, you can demonstrate how good you really are. As you build up a profile, this valuable source of reviews ensures your potential customers will choose you.
+	.point_content With great testimonials from the people you've worked with, you can demonstrate how good you really are. As you build up a profile, this valuable source of reviews ensures your potential customers will choose you.
 
-.review
+.point
 	%h2
 		%span.number 2.
 		Increase your business
-	.review_content Use your profile - full of awesome testimonials -  to demonstrate your true potential to prospective clients. Impress them with your ratings and reviews, all obtained from your previous works, then blow them away with your happy customers and comments.
+	.point_content Use your profile - full of awesome testimonials -  to demonstrate your true potential to prospective clients. Impress them with your ratings and reviews, all obtained from your previous works, then blow them away with your happy customers and comments.
 
-.review
+.point
 	%h2
 		%span.number 3.
 		Enhance your service
-	.review_content Uncovered a problem? When you know what your customers think of you, it's easy to fix things that aren't quite as good as they could be. With feedback from people relevant to you, you can improve the quality of your service, whenever you need to.
+	.point_content Uncovered a problem? When you know what your customers think of you, it's easy to fix things that aren't quite as good as they could be. With feedback from people relevant to you, you can improve the quality of your service, whenever you need to.
 
