--- a/app/views/reviews/_name.html.haml
+++ b/app/views/reviews/_name.html.haml
@@ -1,2 +1,2 @@
-%span.bold= review.name.titleize
-= link_to_remote "hide", :url => { :controller => 'reviews', :action => 'hide_name', :id => review.id }
+%span.reviewer_name
+	= link_to_remote review.name.titleize, :url => { :controller => 'reviews', :action => 'hide_name', :id => review.id }
