--- a/app/views/reviews/_name_greyed.html.haml
+++ b/app/views/reviews/_name_greyed.html.haml
@@ -1,3 +1,3 @@
-%span#greyed
-	%span.bold= review.name.titleize
-= link_to_remote "unhide", :url => { :controller => 'reviews', :action => 'unhide_name', :id => review.id }
+%span#struck
+	%span.reviewer_name
+		= link_to_remote review.name.titleize, :url => { :controller => 'reviews', :action => 'unhide_name', :id => review.id }
