--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -12,7 +12,7 @@ a {
 h2 {
 	font-size: 24px;
 	text-shadow: 1px 1px 1px #666;
-	font-weight: 600;
+	font-weight: 600;lo
 }
 
 h3 {	
@@ -23,6 +23,13 @@ h3 {
 }
 
 h4 {
+	font-size: 16px;
+	color: #000;
+	text-shadow: 1px 1px 1px #36434a;
+	font-weight: 100;
+}
+
+h5 {
 	font-size: 14px;
 	color: #36434a;
 	font-weight: 100;
@@ -33,6 +40,12 @@ h4 {
 }
 
 #page {
+	width: 600px;
+	margin-left: auto;
+	margin-right: auto;
+}
+
+#top {
 	width: 600px;
 	margin-left: auto;
 	margin-right: auto;
@@ -68,18 +81,17 @@ h4 {
 #error {
 	background: #da9e9e;
 	border: 1px solid #a76b67;
-}
-
+}
 #login {
 	float: right;
-	background: url('../images/login_button.png') center no-repeat;
+	background: #263640;
+	border: 1px solid #333;
 	color: #fff;
 	text-decoration: none;
 	font-size: 12px;
 	width: 54px;
 	height: 24px;
 	padding: 8px 0 0 15px;
-	margin-right: -7px;
 }
 
 .upper {
@@ -89,8 +101,13 @@ h4 {
 	margin-top: 20px;
 }
 
+#large_header {
+	min-height: 200px;
+}
+
 .upper h2 {
 	margin-top: -1px;
+	display: block;
 }
 
 .upper_inner {
@@ -103,6 +120,22 @@ h4 {
 	width: 73px;
 	height: 74px;
 	padding: 7px;
+	float: left;
+}
+
+#logo_small {
+	background: url('../images/image_border_large.png') center no-repeat;
+	width: 162px;
+	height: 162px;
+	padding: 12px;
+	padding: 11px 12px 13px 12px;
+	float: right;
+	z-index: 1
+	display: block;
+}
+
+.buttons {
+	margin: 28px 0 0 -10px;
 	float: left;
 }
 
@@ -119,6 +152,8 @@ h4 {
 	font-size: 16px;
 	color: #fff;
 	cursor: pointer;
+	float: left;
+	margin-left: 5px;
 }
 
 .right_button {
@@ -153,7 +188,7 @@ h4 {
 	margin-top: -1px;
 }
 
-#email_form h4 {
+#email_form h5 {
 	margin-top: -20px;
 }
 
@@ -233,26 +268,188 @@ textarea {
 
 }
 
-.review {
+#averages {
+	height: 100px;
+}
+
+.left_averages {
+	margin-top: 15px;
+	float: left;
+	width: 260px;
+	padding-right: 15px;
+}
+
+.right_averages {
+	margin-top: 15px;
+	float: right;
+	width: 240px;
+	padding-right: 10px;
+}
+
+#border {
+	float: left;
+	margin-left: 10px;
+	background: url('../images/central_divider.png') no-repeat center;
+	width: 2px;
+	height: 100px;
+}
+
+.category {
+	font-size: 18px;
+	color: #36434a;
+	float: left;
+	margin-top: 10px;
+}
+
+.result {
+	font-size: 18px;
+	color: #fff;
+	text-shadow: 1px 1px 1px #666;
+	float: right;
+	margin-top: 10px;
+	
+}
+
+.point {
 	margin-top: 20px;
 	background-color: #6c8695;
 	border: 1px solid #9f9b96;
 	padding: 15px 15px 15px 20px;
 }
 
-.review h2 {
+.point h2 {
 	line-height: auto;
 	margin-top: -2px;
 }
 
-.review h2 .number {
+.point h2 .number {
 	color: #36434a;
 	text-shadow: none;
+}
+
+.point .point_content {
+	margin-left: 37px;
+	margin-top: -10px;
+}
+
+.review {
+	line-height: 20px;
+	margin-top: 20px;
+	background: url('../images/normal_top_quote.png') 20px 10px no-repeat #6c8695;
+	border: 1px solid #9f9b96;
+	padding: 32px 35px 40px 35px;
+	min-height: 20px;
+}
+
+#review_0 {
+	background: url('../images/featured_top_quote.png') 20px 10px no-repeat #45637d;
+	border: 1px solid #827e7a;
+}
+
+.permalink {
+	background: url('../images/normal_plus.png');
+	float: right;
+	margin-top: -31px;
+	margin-right: -34px;
+	text-decoration: none;
+	width: 28px;
+	height: 28px;
+	font-size: 0;
+}
+
+#permalink_0 {
+	background: url('../images/featured_plus.png');
+}
+
+#tweet_this {
+	float: right;
+	margin-top: -31px;
+	margin-right: -34px;
+	height: 28px;
+}
+
+.field {
+	font-size: 18px;
+	color: #36434a;
+	margin-top: 10px;
+}
+
+.answer {
+	font-size: 18px;
+	color: #fff;
+	text-shadow: 1px 1px 1px #666;
+	margin-top: 10px;
+	
+}
+
+.point h5 {
+	float: right;
+	line-height: 16px;
+	padding: 0;
+	margin-top: -1px;
 }
 
 .review .review_content {
 	margin-left: 37px;
 	margin-top: -10px;
+}
+.reviewer_name {
+	font-size: 16px;
+	color: #fff;
+	text-shadow: 1px 1px 1px #666;
+	text-decoration: none;
+}
+
+.reviewer_company {
+	font-size: 16px;
+	color: #fff;
+	text-shadow: 1px 1px 1px #666;
+	font-style: italic;
+	font-weight: 100;
+	text-decoration: none;
+}
+
+.reviewer_company a {
+	text-decoration: none;
+}
+
+.reviewer_name a {
+	text-decoration: none;
+}
+
+
+#struck {
+	text-decoration: line-through;
+}
+
+.attribs {
+	bottom: 0;
+	right: 0;
+	height: 16px;
+	margin-right: -20px;
+	margin-top: 20px;
+	float: right;
+	padding-top: 10px;
+	padding-right: 51px;
+	background: url('../images/normal_bottom_quote.png') right 0px no-repeat;
+}
+
+#attribs_0 {
+	background: url('../images/featured_bottom_quote.png') right 0px no-repeat;
+}
+
+#badge {
+	width: 172px;
+	height: 86px;
+	display: block;
+	margin-left: auto;
+	margin-right: auto;
+	margin-top: 20px;
+	padding-bottom: 20px;
+}
+
+#badge_area {
+	height: 80px;
 }
 
 #footer {
@@ -273,4 +470,48 @@ textarea {
 	height: 20px;
 	margin-left: -28px;
 	background-repeat: no-repeat;
+}
+
+#my_testify_link {
+	float: right;
+	background: #263640;
+	border: 1px solid #333;
+	color: #fff;
+	text-decoration: none;
+	font-size: 12px;
+	width: 70px;
+	height: 24px;
+	padding: 8px 0 0 15px;
+	z-index: 3;
+}
+
+ul#navigation {
+	float: right;
+	list-style-type: none;
+	margin-top: 32px;
+	z-index: 2;
+	position:absolute;
+	margin-left: 513px;
+	background: #263640;
+	border: 1px solid #333;
+}
+
+ul#navigation li {
+	margin-left: -40px;
+	padding: 5px
+}
+
+ul#navigation li:hover {
+	background-color: #222;
+}
+
+ul#navigation li a {
+	text-decoration: none;
+}
+
+#message {
+	background: #a3a9ab;
+	padding: 1px 15px 15px 20px;
+	border-bottom: 1px solid #dcd9d5;
+	margin-top: 20px;
 }
