#53 GET invite code for signup

--- a/app/views/notifier/beta_invite.html.haml
+++ b/app/views/notifier/beta_invite.html.haml
@@ -5,10 +5,10 @@
 %p
 	Thanks for your interest in Testify. To sign up, go to:
 	%br
-	= link_to "http://testifyapp.com/signup", "http://testifyapp.com/signup"
+	= link_to "http://testifyapp.com/signup/#{@code}", "http://testifyapp.com/signup/#{@code}"
 
 %p
-	You'll need to following invite code too:
+	You might need the following invite code too:
 	%b= @code
 	
 %p
