--- a/app/views/notifier/review_completed.html.haml
+++ b/app/views/notifier/review_completed.html.haml
@@ -1,6 +1,9 @@
 %p
 	Hey
-	= @review.user.name.titleize
+	- if @review.user.name.nil?
+		= @review.user.handle
+	- else
+		= @review.user.name.titleize
 
 %p
 	= @review.name.titleize
