--- a/app/views/users/edit.html.haml
+++ b/app/views/users/edit.html.haml
@@ -1,46 +1,79 @@
 
 .upper
-	%h2 Account settings
+	- if params[:first_time] == 'true'
+		%h2 Your details
+	- elsif params[:upload_logo] == 'true'
+		%h2 Choose a logo
+	-else
+		%h2 Account settings
 
 .lower
 	-	form_for(@user, :html => { :multipart => true }) do |f|
-		= f.error_messages :header_message => "Oops! There's been a bit of a problem.", :header_tag => 'h3', :message => "We had some problems with the following fields:"
-		%p
-			= f.label :name
-			%br
-			= f.text_field :name
-		%p
-			= f.label :about, 'About you'
-			%br
-			= f.text_field :about, :maxlength => 300, :size => 30
-		%p
-			= f.label :site, 'Website'
-			%br
-			= f.text_field :site, :maxlength => 200, :size => 30
-		%p
-			= f.label :email
-			%br
-			= f.text_field :email
-		%p.divider
-			= f.label :password, 'Password'
-			%br
-			= f.password_field :password
-		%p
-			= f.label :password_confirmation, 'Confirm Password'
-			%br
-			= f.password_field :password_confirmation
-		%p.divider
-			= f.label :logo, 'Upload an image or logo'
-			%br
-			= f.file_field :logo
-		%p.divider
-			= f.label :tusername, 'Twitter username'
-			%br
-			= f.text_field :tusername
-		%p
-			= f.label :tpassword, 'Twitter password'
-			%br
-			= f.password_field :tpassword
-		%p
-			= f.submit "Update", :id => 'save_button'
-			= link_to 'Cancel', user_path(@user), :id => 'cancel_link'
+		= f.error_messages :header_message => nil, :header_tag => 'h3', :message => "We had some problems with the following fields:"
+		
+		- if params['upload_logo'] == 'true'
+			%p.divider
+				= f.label :logo, 'Upload an image or logo'
+				%br
+				= f.file_field :logo
+			%p
+				= f.submit "Next", :id => 'save_button'
+				= link_to 'Skip this &raquo;', short_user_path(@user)
+				
+		- elsif params['first_time'] == 'true'
+			= hidden_field_tag :first_time, 'true'
+			%p
+				= f.label :name
+				%br
+				= f.text_field :name
+			%p
+				= f.label :about, 'About you'
+				%br
+				= f.text_field :about, :maxlength => 300, :size => 30
+			%p
+				= f.label :site, 'Website'
+				%br
+				= f.text_field :site, :maxlength => 200, :size => 30, :value => 'http://'
+			%p
+				= f.submit "Next", :id => 'save_button'
+				= link_to 'Skip this &raquo;', short_user_path(@user)
+				
+			- else
+			%p
+				= f.label :name
+				%br
+				= f.text_field :name
+			%p
+				= f.label :about, 'About you'
+				%br
+				= f.text_field :about, :maxlength => 300, :size => 30
+			%p
+				= f.label :site, 'Website'
+				%br
+				= f.text_field :site, :maxlength => 200, :size => 30, :value => 'http://'
+				%p
+					= f.label :email
+					%br
+					= f.text_field :email
+				%p.divider
+					= f.label :password, 'Password'
+					%br
+					= f.password_field :password
+				%p
+					= f.label :password_confirmation, 'Confirm Password'
+					%br
+					= f.password_field :password_confirmation
+				%p.divider
+					= f.label :logo, 'Upload an image or logo'
+					%br
+					= f.file_field :logo
+				%p.divider
+					= f.label :tusername, 'Twitter username'
+					%br
+					= f.text_field :tusername
+				%p
+					= f.label :tpassword, 'Twitter password'
+					%br
+					= f.password_field :tpassword
+				%p
+					= f.submit "Update", :id => 'save_button'
