Fixed bug with initial value of website field in users#edit

--- a/app/views/users/edit.html.haml
+++ b/app/views/users/edit.html.haml
@@ -50,7 +50,7 @@
 			%p
 				= f.label :site, 'Website'
 				%br
-				= f.text_field :site, :maxlength => 200, :size => 30, :value => 'http://'
+				= f.text_field :site, :maxlength => 200, :size => 30
 				%p
 					= f.label :email
 					%br
