#56 #57 Removed twitter settings and implemented customisable review criteria

--- a/app/views/reviews/new.html.haml
+++ b/app/views/reviews/new.html.haml
@@ -17,58 +17,61 @@
 			= f.text_area :body, :value => 'Comments'
 			
 			=	f.hidden_field :demand_id
-		%p.radios.divider
-			= f.label :value_for_money, "Value for money:"
-			%br
-			= f.radio_button :value_for_money, 4
-			Excellent
-			= f.radio_button :value_for_money, 3
-			Good
-			= f.radio_button :value_for_money, 2, :checked => true
-			Average
-			= f.radio_button :value_for_money, 1
-			Poor
-			= f.radio_button :value_for_money, 0
-			Awful
-		%p.radios.divider
-			= f.label :time_management, "Time management:"
-			%br
-			= f.radio_button :time_management, 4
-			Excellent
-			= f.radio_button :time_management, 3
-			Good
-			= f.radio_button :time_management, 2, :checked => true
-			Average
-			= f.radio_button :time_management, 1
-			Poor
-			= f.radio_button :time_management, 0
-			Awful
-		%p.radios.divider
-			= f.label :customer_service, "Customer service:"
-			%br
-			= f.radio_button :customer_service, 4
-			Excellent
-			= f.radio_button :customer_service, 3
-			Good
-			= f.radio_button :customer_service, 2, :checked => true
-			Average
-			= f.radio_button :customer_service, 1
-			Poor
-			= f.radio_button :customer_service, 0
-			Awful
-		%p.radios.divider
-			= f.label :quality_of_service, "Overall quality:"
-			%br
-			= f.radio_button :quality_of_service, 4
-			Excellent
-			= f.radio_button :quality_of_service, 3
-			Good
-			= f.radio_button :quality_of_service, 2, :checked => true
-			Average
-			= f.radio_button :quality_of_service, 1
-			Poor
-			= f.radio_button :quality_of_service, 0
-			Awful
+		- unless @demand.user.value_for_money_name.blank?
+			%p.radios.divider
+				= f.label :value_for_money, @demand.user.value_for_money_name
+				%br
+				= f.radio_button :value_for_money, 4
+				Excellent
+				= f.radio_button :value_for_money, 3
+				Good
+				= f.radio_button :value_for_money, 2, :checked => true
+				Average
+				= f.radio_button :value_for_money, 1
+				Poor
+				= f.radio_button :value_for_money, 0
+				Awful
+		- unless @demand.user.time_management_name.blank?
+			%p.radios.divider
+				= f.label :time_management, @demand.user.time_management_name
+				%br
+				= f.radio_button :time_management, 4
+				Excellent
+				= f.radio_button :time_management, 3
+				Good
+				= f.radio_button :time_management, 2, :checked => true
+				Average
+				= f.radio_button :time_management, 1
+				Poor
+				= f.radio_button :time_management, 0
+				Awful
+		- unless @demand.user.customer_service_name.blank?
+			%p.radios.divider
+				= f.label :customer_service, @demand.user.customer_service_name
+				%br
+				= f.radio_button :customer_service, 4
+				Excellent
+				= f.radio_button :customer_service, 3
+				Good
+				= f.radio_button :customer_service, 2, :checked => true
+				Average
+				= f.radio_button :customer_service, 1
+				Poor
+				= f.radio_button :customer_service, 0
+				Awful
+		- unless @demand.user.quality_of_service_name.blank?
+			%p.radios.divider
+				= f.label :quality_of_service, @demand.user.quality_of_service_name
+				%br
+				= f.radio_button :quality_of_service, 4
+				Excellent
+				= f.radio_button :quality_of_service, 3
+				Good
+				= f.radio_button :quality_of_service, 2, :checked => true
+				Average
+				= f.radio_button :quality_of_service, 1
+				Poor
+				= f.radio_button :quality_of_service, 0
+				Awful
 		%p.divider
 			= f.submit "Continue", :id => 'save_button'
-			= link_to 'or cancel', short_user_path(@demand.user), :id => 'cancel_link		'
