--- a/app/views/notifier/reminder.html.haml
+++ b/app/views/notifier/reminder.html.haml
@@ -7,9 +7,7 @@
 		= @demand.user.handle
 	- else
 		= @demand.user.name.titleize
-	wants to remind you to provide feedback on the following:
-	%br
-	%b= @demand.work.titleize
+	wants to remind you to provide feedback on Testify.
 
 %p
 	To let them know what you thought, go to:
