--- a/app/views/notifier/review_completed.html.haml
+++ b/app/views/notifier/review_completed.html.haml
@@ -7,9 +7,7 @@
 
 %p
 	= @review.name.titleize
-	has reviewed you on for the following:
-	%br
-	%b= @review.work.titleize
+	has reviewed you on Testify.
 
 %p
 	To see what they thought, you can view your profile
